--- a/kgat.yaml
+++ b/kgat.yaml
@@ -17,12 +17,16 @@ load_col:
 val_interval:
     rating: "[3,inf)"
 
+# 11/30 有的数据集的user 和item 特别多，所以需要在kgat.yaml 中加入如下两行配置信息: 
+user_inter_num_interval: "[15,inf)" 
+item_inter_num_interval: "[15,inf)"
+
 # training and evaluation
 epochs: 500
 train_batch_size: 4096
 eval_batch_size: 102400
 valid_metric: MRR@10
-stopping_step: 1000
+stopping_step: 50 # 11/30, 1000->50
 
 # model
 embedding_size: 64
